style.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

/*
Font families
font-family: 'Lato', sans-serif;
font-family: 'Merriweather', serif;
*/

/* ---------------HEADER--------------- */
header {
  background-color: #3c0000;
  height: 80px;
}

.header-container {
  height: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0 1rem;
}

.logo-header {
  height: 60px;
}

.btn-hamburguer {
  background: none;
  border: none;
  margin-right: 1rem;
}

.btn-hamburguer i {
  font-size: 2rem;
  color: #fff;
}

.nav-hamburguer {
  display: none;
  position: fixed;
  z-index: 2;
  right: 0;
  top: 0;
  height: 100vh;
  width: 80%;
  background-color: #3c0000;
  animation: nav-hamburguer-out 0.5s 1;
}

@keyframes nav-hamburguer-in {
  0% {
    opacity: 0%;
    right: -100%;
  }
  100% {
    opacity: 100%;
  }
}

@keyframes nav-hamburguer-out {
  0% {
    opacity: 100%;
  }
  100% {
    opacity: 0%;
    right: -100%;
  }
}

.nav-hamb-close {
  margin-top: 2rem;
  margin-bottom: 1rem;
}

.fa-xmark {
  color: #fff;
  font-size: 2rem;
}

.nav-hamburguer ul {
  display: flex;
  flex-direction: column;
  align-items: flex-end;
}

.nav-hamb-li {
  list-style: none;
  margin-right: 2rem;
  margin-bottom: 1.5rem;
  font-size: 1.5rem;
  font-family: "Lato", sans-serif;
}

.nav-hamb-li a {
  text-decoration: none;
  color: #fff;
}

.nav-extenso {
  display: none;
}

/* -------------CONTATO-MODAL------------- */
.contato-modal {
  position: fixed;
  /* display: none; */
  align-items: center;
  justify-content: center;
  background-color: rgb(0, 0, 0, 0.75);
  width: 100vw;
  height: 100vh;
  z-index: 10;
}

.modal-container {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: clamp(300px, 90vw, 540px);
  padding: 1rem;
  background-color: #3c0000;
  color: #f5f5f5;
  font-family: 'Lato', sans-serif;
}

.modal-container h3 {
  margin: 0.8rem 0;
  font-size: 2rem;
}

.close-modal-contato {
  position: absolute;
  top: 1rem;
  right: 1rem;
  color: rgba(255, 255, 255, 0.75);
  font-size: 2rem;
  cursor: pointer;
  transition: all .3s;
}

.close-modal-contato:hover {
  color: #f5f5f5;
  }

.modal-container form {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  margin-top: 1rem;
  min-height: 300px;
}

.modal-container input {
  padding: 0.5rem;
}

.modal-container textarea {
  padding: 0.5rem;
  font-size: 1rem;
  font-family: 'Lato', sans-serif;
}

.modal-container form button {
  margin: 1rem auto;
  margin-bottom: 0;
  width: 60%;
  padding: 0.5rem;
  background: none;
  border: solid #774936;
  color: #774936;
  font-size: 1.2rem;
  transition: all .3s;
}

.modal-container form button:hover {
  cursor: pointer;
  background-color: rgba(255, 255, 255, 0.3);
  border: solid rgba(0, 0, 0, 0%);
  color: #f5f5f5;
}
/* ---------------CARROSSEL--------------- */
.carrossel-container {
  height: 400px;
  width: 100%;
  position: relative;
}

.carrossel-item {
  position: absolute;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100%;
  width: 100%;
  background-position: center;
  background-size: cover;
  color: #fff;
  transition: all 0.3;
}

.carr-item-text-container {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background-color: rgb(0, 0, 0, 0.25);
}

.carrossel-item h2 {
  font-size: 3.5rem;
  margin-bottom: 1rem;
  text-shadow: 2px 2px 2px rgb(0, 0, 0, 0.75);
}

.carrossel-item h3 {
  font-size: 2rem;
  margin-bottom: 2rem;
  padding: 1rem;
  text-shadow: 2px 2px 2px rgb(0, 0, 0, 0.75);
  text-align: center;
}

.btn-contato {
  background: rgb(0, 0, 0, 0.3);
  padding: 1rem;
  border: solid 2px #334e58;
  color: #fff;
  font-family: "Merriweather", serif;
  font-size: 1rem;
  transition: all 0.2s;
}

.btn-contato:hover {
  background: rgb(0, 0, 0, 0.6);
  cursor: pointer;
}

#carr-item01,
#carr-item02,
#carr-item03,
#carr-item04,
#carr-item05 {
  z-index: -1;
}

#carr-item02,
#carr-item03,
#carr-item04,
#carr-item05 {
  display: none;
}

@keyframes carrossel-fade-in {
  0% {
    opacity: 0%;
  }
  100% {
    opacity: 100%;
  }
}

@keyframes carrossel-fade-out {
  0% {
    opacity: 100%;
  }
  100% {
    opacity: 0%;
  }
}

.carrossel-btn-container {
  display: flex;
  width: 100%;
  justify-content: center;
  position: absolute;
  transform: translateX(-50%);
  left: 50%;
  bottom: 24px;
}

.carrossel-btn-container li {
  list-style-type: none;
}

.carrossel-btn-container button {
  width: clamp(40px, 8vw, 100px);
  height: 8px;
  margin: 0 4px;
  border: none;
  background-color: rgba(255, 255, 255, 0.3);
  transition: background-color 1s;
}

.carrossel-btn-container .btn-ativo {
  background-color: rgba(255, 255, 255, 0.8);
}

/* ---------------SOBRE NÓS--------------- */
.sobre-nos-container {
  padding: 2rem 1rem;
  font-family: "Lato", sans-serif;
  color: #334e58;
}

.sobre-nos-container h2 {
  margin: 1rem 0;
  font-size: 2rem;
}

.sobre-nos-texto {
  margin: 1rem 0;
  max-height: 60px;
  overflow: hidden;
  transition: max-height 1s ease-in-out;
}

.sobre-nos-texto-ativo {
  max-height: 600px;
}

.sobre-nos-container button {
  width: 200px;
  height: 48px;
  border: none;
  background-color: #334e58;
  color: #d2d7df;
  font-size: 1.5rem;
  transition: all 0.3s;
}

.sobre-nos-container button:hover {
  background-color: #10262e;
  cursor: pointer;
}

/* ---------------TABELA--------------- */
.tabela-container {
  margin: 1rem;
  border: solid 1px #334e58;
}

#btn-tabela-container {
  display: flex;
  flex-direction: column;
}

.btn-tabela {
  border: none;
  padding: 8px;
  background-color: #334e58;
  color: #d2d7df;
  font-size: 1.5rem;
  font-weight: 600;
}

.btn-tabela-ativo {
  background-color: #fff;
  color: #334e58;
}

.tabela-info {
  display: none;
  padding: 1rem;
  color: #334e58;
  font-family: "Lato", sans-serif;
  font-size: 1.2rem;
}

.tabela-info-ativa {
  display: block;
}

.tabela-ul {
  display: none;
  padding: 1rem;
  padding-top: 0;
  margin-left: 1.5rem;
  color: #334e58;
  font-family: "Lato", sans-serif;
  font-size: 1.2rem;
}

.tabela-ul-ativa {
  display: block;
}

/* -------------COMENTÁRIOS------------- */
.comentarios-bg {
  background-image: url(img/comentarios-bg.jpg);
  background-attachment: fixed;
  background-position: center;
  background-size: cover;
  margin: 2rem 0;
}

.comentarios-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding: 2rem;
  background-color: rgba(0, 0, 0, 0.25);
  color: #d2d7df;
  font-family: "Merriweather", serif;
}

.comentarios-container h2 {
  font-size: 2.5rem;
  font-weight: 100;
  padding: 0 2rem;
  text-align: center;
}

.comentarios-todos {
  width: auto;
  display: flex;
  overflow: scroll;
}

.comentario {
  min-width: 220px;
  height: 280px;
  padding: 1rem;
  display: flex;
  flex-direction: column;
  text-align: center;
  background-color: #f5f5f5;
  color: #334e58;
  margin: 0 calc((100vw - 280px) / 2 + 1rem);
  margin-top: 1.5rem;
  margin-bottom: 1rem;
}


.comentarios-container ::-webkit-scrollbar {
  width: 4px;
  height: 4px;
}

.comentarios-container ::-webkit-scrollbar-track {
  background: none;
}

.comentarios-container ::-webkit-scrollbar-thumb {
  background: rgba(255, 255, 255, 0.75)
}


.comentarios-container ::-webkit-scrollbar-corner {
  background: none;
}

.comentario p::-webkit-scrollbar-thumb {
  background: rgba(0, 0, 0, 0.25);
}

.estrelas {
  margin-bottom: 1rem;
}

.comentario h3 {
  margin-bottom: 1.5rem;
}

.comentario-texto {
  text-align: left;
  overflow: scroll;
}

/* ------------TEXTO GENÉRICO------------ */
.texto-generico {
  margin: 1rem;
  font-family: "Lato", sans-serif;
  color: #334e58;
}

/* ---------------PORTFÓLIO--------------- */
.portfolio-h2 {
  margin: 2.5rem 0;
  text-transform: uppercase;
  font-size: 2rem;
  font-family: "Lato", sans-serif;
  text-align: center;
  color: #3c0000;
  position: relative;
}

.portfolio-h2::before {
  content: "";
  display: block;
  height: 4px;
  width: 20vw;
  transform: translateY(-50%);
  background-color: #3c0000;
  position: absolute;
  top: 50%;
  left: 0;
}

.portfolio-h2::after {
  content: "";
  display: block;
  height: 4px;
  width: 20vw;
  transform: translateY(-50%);
  background-color: #3c0000;
  position: absolute;
  top: 50%;
  right: 0;
}

.portfolio-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

.portfolio-img-container {
  position: relative;
  cursor: pointer;
}

.portfolio-img {
  height: 250px;
  width: 250px;
  object-fit: cover;
  margin: 1rem;
}

.img-zoom {
  display: none;
  width: 250px;
  height: 250px;
  position: absolute;
  background-color: rgb(60, 0, 0, 0.9);
  top: 1rem;
  left: 1rem;
  animation: showZoomBg 1s 1;
}

.img-zoom-ativo {
  display: block;
}

@keyframes showZoomBg {
  0% {
    background-color: rgb(0, 0, 0, 0.25);
  }
  100% {
    background-color: rgb(60, 0, 0, 0.9);
  }
}

.fa-magnifying-glass {
  margin-top: 50%;
  margin-left: 50%;
  transform: translate(-50%, -50%);
  padding: 1rem;
  color: #fff;
  border: solid #fff 4px;
  border-radius: 50%;
  font-size: 2.5rem;
  animation: showZoomIcon 1s 1;
}

@keyframes showZoomIcon {
  0% {
    color: rgba(0, 0, 0, 0%);
    border: solid rgba(0, 0, 0, 0%) 4px;
  }
  100% {
    color: #fff;
    border: solid #fff 4px;
  }
}

.portfolio-modal {
  position: fixed;
  display: none;
  align-items: center;
  justify-content: center;
  background-color: rgb(0, 0, 0, 0.75);
  width: 100vw;
  height: 100vh;
  z-index: 10;
}

.modal-img {
  position: relative;
  display: flex;
  justify-content: center;
}

.close-modal {
  position: absolute;
  top: 0.3rem;
  right: 1.5rem;
  color: rgba(255, 255, 255, 0.75);
  font-size: 2rem;
}

.portfolio-modal img {
  max-width: 90%;
  max-height: 90vh;
  left: 50%;
}

#modal-prev, #modal-prox {
  position: absolute;
  width: 48px;
  height: 48px;
  border-radius: 50%;
  border: none;
  background: none;
  top: 50%;
  transform: translateY(-50%);
  color: rgba(255, 255, 255, 0.75);
  font-size: 2rem;
}

#modal-prev {
  left: 1rem;
}
#modal-prox {
  right: 1rem;
}

/* ---------------MAPS--------------- */
#localizacao {
  margin-top: 2rem;
}

/* ---------------FOOTER--------------- */
footer {
  background-color: #3c0000;
  font-family: 'Lato', sans-serif;
  color: #d2d7df;
  font-size: 1.2rem;
}

.footer-container {
  display: flex;
  flex-direction: column;
  padding: 1rem 0;
  width: clamp(150px, 50vw, 300px);
  margin-left: auto;
  margin-right: auto;
}

footer .footer-column {
  margin: 1rem 0;
}

footer h3 {
  text-transform: uppercase;
  font-size: 1.8rem;
  font-weight: 100;
  margin: 1rem 0;
}

footer li {
  list-style: none;
  margin: 0.8rem 0;
}

footer a {
  text-decoration: none;
  color: #d2d7df;
}

footer i {
  margin-right: 0.3rem;
  font-size: 1.5rem;
}

#credits {
  display: flex;
  align-items: center;
  font-size: small;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-bottom: 1rem;
}

.fa-copyright {
  font-size: small;
}

#credits ul {
  display: flex;
  margin-left: auto;
}

#credits li {
  margin: 0 4px;
}

